# rust-miner-ipfs-service

./: .gitignore  Cargo.toml  README.md  config.sample.toml
.github/workflows/: build.yml
src/: db.rs  disk.rs  ipfs.rs  main.rs  model.rs  monitoring.rs  parse.rs  service.rs  settings.rs  substrate.rs  test_utils.rs
src/notifier/: gmail.rs  mod.rs  telegram.rs
src/service/: tests.rs
