[package]
name = "miner-ipfs-service"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust service that syncs IPFS pins from a Substrate-hosted miner profile CID, with SQLite state, retries, and periodic GC."

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive", "env"] }
url = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
sha2 = "0.10"
regex = "1"


# SQLite ORM/driver
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }


# Substrate client
subxt = { version = "0.44", default-features = false, features = ["native", "jsonrpsee"] }


# Futures for async streams
futures = "0.3"


# Configuration
config = "0.14"
figment = { version = "0.10", features = ["env", "toml", "json"] }
serde_with = { version = "3", features = ["chrono"] }


ctrlc = "3"
backoff = { version = "0.4", features = ["tokio"] }