[package]
name = "miner-ipfs-service"
version = "0.2.8"
edition = "2024"
license = "GPL-3.0"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[dependencies]
anyhow = "1"
bincode = { version = "2", features = ["serde"] }
bytes = "1"
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
clap = { version = "4", features = ["derive", "env"] }
url = "2"
chrono = { version = "0.4", features = ["serde", "clock"] }
hex = "0.4"
sysinfo = "0.37"
parquet = "56"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener", "tokio"] }

# API Server
axum = "0.8"

# async-std
async-std = "1"

# Parity DB
parity-db = "0.5"

# Substrate client
subxt = { version = "0.44", default-features = false, features = ["native", "jsonrpsee"] }

# Email via Gmail (SMTP)
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml", "json"] }
ctrlc = "3"

# utilities
futures-util = "0.3"



[dev-dependencies]
assert_cmd = "2"
serial_test = "3"
tempfile = "3"
httpmock = "0.7"
mockall = "0.11" 
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
